Details
-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 3.4.0-rc1
-
Linux
Windows 7 64 bit
Qt 5.3.2, 5.4.1
-
fe1b031f80663eecdb15ec0cd545e00386df70bc
Description
- Create a new Qt Quick UI project using component set "Qt Quick 2.3".
- Start debugging this.
You'll see the "Locals and Expressions" view which displays the items. - Double-click the name of of the first item or click the arrow icon.
Nothing obvious will happen. - Double-click the name of of the first item again or click the arrow icon again.
The item's sub-tree will open.
Double clicking an item should open its sub-tree at the first time. This used to work correctly in Creator 3.3.
Found by Squish test tst_qml_js_console.
Attachments
Issue Links
- replaces
-
QTCREATORBUG-14192 [REG 3.3 -> 3.4] "Name" column in "Locals and Expressions" is too narrow
-
- Closed
-
For Gerrit Dashboard: QTCREATORBUG-14210 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
109436,3 | Squish: Work around items not expanding | 3.4 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
120896,2 | Debugger: Expand items in QML Inspector on first click | 3.5 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |